src/main/java/com/example/appointment_scheduler/error/CancelAppointmentException.java
package com.example.appointment_scheduler.error;

public class CancelAppointmentException extends Exception {
    public CancelAppointmentException(String message) {
        super(message);
    }
}

